# rp2040-freertos-template

./: CMakeLists.txt  README.md
src/: main.c
